--- a/dashboard.html
+++ b/dashboard.html
@@ -8,9 +8,11 @@
     <meta name="keyword" content="Dashboard, Bootstrap, Admin, Template, Theme, Responsive, Fluid, Retina">
 
     <title>Adventure time: Dashboard</title>
-      <link rel="stylesheet" href="css/font-awesome.min.css">
       <link rel="stylesheet" href="css/icomoon.css">
       <link rel="stylesheet" href="css/queries.css">
+      <link rel="stylesheet" href="js/jquery.js">
+      <link rel="stylesheet" href="js/common-scripts.js">
+      <link rel="stylesheet" href="js/bootstrap.min.js">
       <link rel="stylesheet" href="css/adventure-time-theme-responsive.css">
       <link rel="stylesheet" href="css/adventure-time-theme.css">
       <link rel="stylesheet" href="css/bootstrap.css">
@@ -19,7 +21,7 @@
       <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
-    <section id="container" >
+    <section id="container">
       <header class="header black-bg">
         <div class="sidebar-toggle-box">
             <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
